# swagger.json
@@ -810,6 +810,11 @@
         "tags": [
           "Vibes"
         ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -839,6 +844,9 @@
           "201": {
             "description": "Vibe created successfully"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Error creating vibe"
           }
@@ -849,9 +857,17 @@
         "tags": [
           "Vibes"
         ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "List of vibes"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Error fetching vibes"
@@ -864,6 +880,11 @@
         "summary": "Get a vibe by ID",
         "tags": [
           "Vibes"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
         ],
         "parameters": [
           {
@@ -879,6 +900,9 @@
           "200": {
             "description": "Vibe details"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Vibe not found"
           },
@@ -891,6 +915,11 @@
         "summary": "Update a vibe",
         "tags": [
           "Vibes"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
         ],
         "parameters": [
           {
@@ -928,6 +957,9 @@
           "200": {
             "description": "Vibe updated successfully"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Vibe not found"
           },
@@ -940,6 +972,11 @@
         "summary": "Delete a vibe",
         "tags": [
           "Vibes"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
         ],
         "parameters": [
           {
@@ -954,6 +991,9 @@
         "responses": {
           "200": {
             "description": "Vibe deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Vibe not found"
@@ -1300,6 +1340,13 @@
             "description": "Requests associated with the user"
           }
         }
+      }
+    },
+    "securitySchemes": {
+      "BearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   },
